test: 연관관계 매핑 변경에 따른 테스트 수정